--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "./node_modules/.bin/electron ."
   },
   "dependencies": {
+    "csv-stream": "^0.1.3",
     "electron": "^1.6.2",
-    "electron-settings": "^3.0.14"
+    "electron-settings": "^3.0.14",
+    "through2": "^2.0.3"
   },
   "style": "dist/css/photon.css",
   "sass": "sass/photon.scss"
