--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "csv-stream": "^0.1.3",
     "electron": "^1.6.2",
     "electron-settings": "^3.0.14",
+    "leaflet-pulse-icon": "^0.1.0",
+    "leaflet.markercluster": "^1.0.4",
     "through2": "^2.0.3"
   },
   "style": "dist/css/photon.css",
