--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "electron-settings": "^3.0.14",
     "leaflet-pulse-icon": "^0.1.0",
     "leaflet.markercluster": "^1.0.4",
-    "through2": "^2.0.3"
+    "through2": "^2.0.3",
+    "pelias-batch-search": "git://github.com/pelias/scripts-batch-search.git#smarter-batch"
   },
   "style": "dist/css/photon.css",
   "sass": "sass/photon.scss"
