--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "start": "./node_modules/.bin/electron ."
   },
   "dependencies": {
+    "async": "^2.4.1",
     "csv-stream": "^0.1.3",
     "electron": "^1.6.2",
     "electron-settings": "^3.0.14",
+    "express": "^4.15.3",
     "leaflet-pulse-icon": "^0.1.0",
     "leaflet.markercluster": "^1.0.4",
-    "through2": "^2.0.3",
-    "pelias-batch-search": "git://github.com/pelias/scripts-batch-search.git#smarter-batch"
+    "lodash": "^4.17.4",
+    "pelias-batch-search": "git://github.com/pelias/scripts-batch-search.git#smarter-batch",
+    "through2": "^2.0.3"
   },
   "style": "dist/css/photon.css",
   "sass": "sass/photon.scss"
